# FluxScriptStudio

./: .gitignore  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/jnd/fluxscriptstudio/: CompilerInstrumentationTest.kt  CompilerUiTest.kt  ExampleInstrumentedTest.kt  FluxCodeTest.kt  FluxCompilerValidation.kt  FluxScriptIntegrationTest.kt  FluxScriptValidationTest.kt  FluxTestSuite.kt  SmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: control_flow.flux  functions.flux  math.flux  smoke_test.flux
app/src/main/cpp/: CMakeLists.txt  fluxscriptstudio.cpp
app/src/main/java/com/jnd/fluxscriptstudio/: MainActivity.kt
app/src/main/java/com/jnd/fluxscriptstudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jnd/fluxscriptstudio/: ExampleUnitTest.kt  VisualTransformationTest.kt
gradle/wrapper/: gradle-wrapper.properties
